1999-02-03  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        * intgcd.d (I_I_xgcd_I_I_I): Use C comments, not C++ comments.

1999-02-03  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        * stream.d (publish_host_data): If hd.truename is NULL, use
          hd.hostname, not hd.truename.

1999-02-03  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        * stream.d: Big renaming orgy.
          (strm_ichannel): was strm_ihandle.
          (strm_ochannel): was strm_ohandle.
          (strm_channel_extrafields): was strm_handle_extrafields.
          (strm_channel_len): was strm_handle_len.
          (strm_channel_extrafields_struct): was
          strm_handle_extrafields_struct.
          (strm_unbuffered_extrafields_struct): was
          strm_u_file_extrafields_struct.
          (ChannelStream_eltype): was HandleStream_eltype.
          (ChannelStream_isatty): was HandleStream_isatty.
          (ChannelStream_ichannel): was HandleStream_ihandle.
          (ChannelStream_ochannel): was HandleStream_ohandle.
          (ChannelStream_buffered): was HandleStream_buffered.
          (ChannelStreamLow_close): was HandleStreamLow_close.
          (ChannelStream_lineno): was HandleStream_lineno.
          (ChannelStream_bitsize): was HandleStream_bitsize.
          (UnbufferedStreamLow_read): was FileStreamLow_read.
          (UnbufferedStreamLow_listen): was FileStreamLow_listen.
          (UnbufferedStreamLow_clear_input): was FileStreamLow_clear_input.
          (UnbufferedStreamLow_read_array): was FileStreamLow_read_array.
          (UnbufferedStream_status): was FileStream_status.
          (UnbufferedStream_lastbyte): was FileStream_lastbyte.
          (UnbufferedStream_rawp): was FileStream_rawp.
          (UnbufferedStreamLow_write): was FileStreamLow_write.
          (UnbufferedStreamLow_write_array): was FileStreamLow_write_array.
          (UnbufferedStreamLow_finish_output): was FileStreamLow_finish_output.