@@ -1,3 +1,7 @@
+1999-02-05  Sam Steingold  <sds@goems.com>
+
+	* spvw.d (usage): added the URL and replaced "oder" with "or".
+
 1999-02-03  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>
 
         * intgcd.d (I_I_xgcd_I_I_I): Use C comments, not C++ comments.
